Update Turtle Soup game features in chat application. Add support for AI host mode with puzzle selection, enhanced game state management, and user score tracking. Implement UI updates for displaying game statistics and AI responses. Improve error handling and session management for a smoother user experience.

--- a/海龟汤功能交接文档.md
+++ b/海龟汤功能交接文档.md
@@ -23,16 +23,21 @@
 - 任何人拒绝则取消整个活动
 - 30秒超时自动取消
 
-### 3. 轮流发言
+### 3. 选择题目
+- 由发起人在海龟汤题库里选择一题
+
+### 4. 轮流发言
 - 按参与者顺序轮流发言
 - 一人一句话，发完自动轮到下一个
 - 非当前发言者输入框被禁用
 - 实时显示当前发言者
+- 发完言之后，AI自动回答：'是'、'不是'、'是也不是'、'没有关系'，并且显示问题质量怎么样，并且记录分数
 
 ### 4. 状态管理
 - 顶部显示海龟汤状态栏
 - 显示"轮到你发言"或"轮到XXX发言"
 - 发起人可随时结束海龟汤
+- 每个人的问题的分数会记录下来
 
 ## 🏗️ 技术实现
 
